Error with keyframe_insert on an Vertex Group #31632

Closed
opened 2012-05-29 08:32:02 +02:00 by Daniel Salazar · 3 comments
Member

%%%Running this on a mesh with a Vertex Group:

bpy.context.active_object.data.vertices- [x].groups- [x].keyframe_insert("weight")

gives the following error:

Error: Could not insert keyframe, as RNA Path is invalid for the given ID (ID = MEMonkey, Path = verts- [x].groups- [x].weight)%%%

%%%Running this on a mesh with a Vertex Group: bpy.context.active_object.data.vertices- [x].groups- [x].keyframe_insert("weight") gives the following error: Error: Could not insert keyframe, as RNA Path is invalid for the given ID (ID = MEMonkey, Path = verts- [x].groups- [x].weight)%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#31632
No description provided.