Fix #31632: error inserting keyframing on vertex group element weight.